techolution-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: techolution-06-sep-2018
  namespace: jenkins
  annotations:
   #kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: test-ip
    #ingress.gcp.kubernetes.io/pre-shared-cert: 
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: jenkins-ui
          servicePort: 8080
      - path: /app
        backend:
          serviceName: app
          servicePort: 80
